@@ -145,7 +145,8 @@ bin_SCRIPTS = guile-snarf guile-doc-snarf guile-snarf-docs \
     guile-snarf-docs-texi guile-func-name-check
 
 EXTRA_DIST = ChangeLog-gh ChangeLog-scm ChangeLog-threads cpp_signal.c	\
-    cpp_errno.c cpp_err_symbols.in cpp_sig_symbols.in cpp_cnvt.awk
+    cpp_errno.c cpp_err_symbols.in cpp_sig_symbols.in cpp_cnvt.awk \
+    c-tokenize.lex
 #    $(DOT_DOC_FILES) $(EXTRA_DOT_DOC_FILES) \
 #    guile-procedures.txt guile.texi
 
@@ -209,6 +210,9 @@ guile.texi: $(DOT_DOC_FILES) $(EXTRA_DOT_DOC_FILES) guile-snarf-docs-texi.in gui
 guile-procedures.txt: guile.texi
 	rm -f $@
 	makeinfo --force -o $@ $< || test -f $@
+
+c-tokenize.c: c-tokenize.lex
+	flex -t $< > $@ || { rm $@; false; }
 
 schemelibdir = $(pkgdatadir)/$(VERSION)
 schemelib_DATA = guile-procedures.txt
